{
    "name": "InGameInputs",
    "maps": [
        {
            "name": "InGame",
            "id": "74ec69a1-b36a-489f-af08-28aad66f0ad3",
            "actions": [
                {
                    "name": "Spatule",
                    "type": "Button",
                    "id": "32130b8a-1e4d-4064-9b5e-cd73870840fa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.8)"
                },
                {
                    "name": "Knife",
                    "type": "Button",
                    "id": "2cac57c3-d926-4750-a1fd-837ff6efdf87",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Tongs",
                    "type": "Button",
                    "id": "bb4f7f7e-b936-486f-9045-f5f86c48c41f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Sucker",
                    "type": "Button",
                    "id": "87b4c5c4-8250-4f36-9b77-e9d5d02cc4de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ad4d535e-40a0-4419-afaa-bfe0b3337df2",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spatule",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60414893-b2ee-4496-8039-f2d31ef8d91d",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spatule",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4c90d25-faa9-42ed-aed5-ad74e59944c4",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spatule",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "135c5b44-5f8a-46db-b9e3-cc12fd60b490",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Knife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9465291f-9e75-4f78-9dab-dac281b6d68b",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Knife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69cf34c9-6839-42c5-a291-2e56600c7f58",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Knife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92638b87-d737-40ac-816e-cdfdb1a329b7",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tongs",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5ec6c58-a84a-44a3-b484-856e964c010c",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tongs",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7180ebf-06d7-4532-b3fc-7eceb2986753",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tongs",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6680280-cdd5-4ae0-aef3-5d10d5737aad",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sucker",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3fc70ca-641e-43d1-8b37-90f1ffe7dc15",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sucker",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10c91913-15e3-41ce-ae59-05689ad8591b",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sucker",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InMenu",
            "id": "75b1c435-0784-45c5-874e-fc1327abe29b",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "9793b146-2346-479d-b6d5-cbfc9bfe9162",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "c540532a-d9f6-4c9a-83cc-68b73ffdef88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "fbc4d8da-8011-4347-9ee0-2e36edfc5b88",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "883205bc-1f5e-4377-ab85-435995f24535",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da394753-9b17-4b69-8ad6-b49b398e2c48",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e012ab26-331b-4b6c-b227-d8fc1f538a1e",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39674bb8-32ec-4140-9761-2bba2b6d32e5",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48484e66-14c5-4e00-9eb6-bc7dff0cdc64",
                    "path": "<DualShockGamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fb50e9a-e92a-496b-815e-9407a537119f",
                    "path": "<XInputController>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8d4db41-44f3-493b-a7cd-1379c76d4d55",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e44b0e9-f6c1-4247-a849-6c93c38d086d",
                    "path": "<DualShockGamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7eede11-9a99-4f5d-be84-f14cb5dbbae8",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}